app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: var(--font-quicksand);
}

body {
  background-color: white;
  padding: 0.5rem;
  display: flex;
  flex-direction: column;
  color: #45474b;
  font-weight: medium;
}

@layer components {
  .listContainer {
    justify-content: center;
    background-color: #f5f7f8;
    max-width: 480px;
  }
  header {
    background-color: #f5f7f8;
    padding-bottom: 1em;
    padding-left: 1em;
    padding-top: 0.5em;
    max-width: 480px;
  }

  footer {
    background-color: #f5f7f8;
    max-width: 480px;
  }

  .addButton {
    color: #45474b;
    height: 36px;
    width: 36px;
    align-items: center;
    padding: 0;
    margin-top: 1em;
  }

  .addButton:hover {
    border-radius: 50%;
    background-color: #dce4e7;
    display: flex;
    justify-content: center;
  }
}

.card {
  display: flex;
  justify-content: space-between;
  margin-left: 4em;
  margin-right: 4em;
}

.icon {
  width: 50px;
  height: 50px;
  margin-top: 0.25em;
  color: #f5f7f8;
  font-weight: 800;
  padding-left: 0.5em;
  padding-top: 0.5em;
  transition: all 0.5s ease;
}

.icon:hover {
  border-radius: 10px;
}

.green {
  background-color: #495e57;
}

.yellow {
  background-color: #f4ce14;
}

.darkGrey {
  background-color: #45474b;
}

.greyBlue {
  background-color: #6c8280;
}

.storeCard {
  padding: 0.5em;
}

.nameAndDelete {
  border-bottom: solid 0.5px;
  border-color: #dce4e7;
  display: flex;
  justify-content: space-between;
  width: 82%;
  min-width: fit-content;
  padding: 1em;
  transition: all 0.5s ease;
}

.itemName {
  font-size: larger;
  /* padding-bottom: 0.5em; */
}

.nameAndDelete:hover {
  background-color: #dce4e7;
  border-radius: 5px;
}

.deleteButton {
  font-weight: bold;
  background-color: #f5f7f8;
  border: solid 0.5px #45474b;
  border-radius: 50%;
  height: 25px;
  width: 25px;
  margin-top: 2px;
  transition: all 0.5s ease;
}

.deleteButton:hover {
  background-color: #45474b;
  color: #f5f7f8;
}

.checkboxContainer {
  display: block;
  position: relative;
  padding-right: 1em;
  margin-top: 3px;
  /* margin-bottom: 2px; */
  /* border: solid; */
  /* justify-self: center; */
  cursor: pointer;
  /* font-size: 22px; */
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.checkboxContainer input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}
.checkboxContainer input:checked ~ .checkmark {
  background-color: #495e57;
}
.checkboxContainer input:checked ~ .checkmark:after {
  display: block;
}

.checkmark {
  position: absolute;
  /* top: 2px;
  left: 2px; */
  /* align-self: center; */
  margin-top: 0.95em;
  height: 25px;
  width: 25px;
  background-color: #f4ce14;
  border-radius: 50%;
}

.checkmark:hover {
  background-color: #dce4e7;
}

.checkedItem {
  text-decoration: line-through;
}

.hideInput {
  display: none;
}

.showInput {
  width: 10em;
  font-weight: 500;
  text-align: center;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  border-radius: 5px;
}

.loginRegisterForm {
  display: flex;
  flex-direction: column;
}

